// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de Citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": [Function],
      "mascota": "Hook",
      "propietario": "Juan",
      "sintomas": "Solo Duerme",
      "telefono": "19030913",
    },
  ],
}
`;

exports[`Probar la clase de Citas actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": [Function],
      "mascota": "Nuevo Nombre",
      "propietario": "Juan",
      "sintomas": "Solo Duerme",
      "telefono": "19030913",
    },
  ],
}
`;

exports[`Probar la clase de Citas eliminar cita 1`] = `
Citas {
  "citas": Array [],
}
`;
